WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
231247
[LFC][IFC] word-break: break-all only allows mid-word arbitrary breaking positions
https://bugs.webkit.org/show_bug.cgi?id=231247
Summary
[LFC][IFC] word-break: break-all only allows mid-word arbitrary breaking posi...
alan
Reported
2021-10-05 13:05:27 PDT
and not any.
Attachments
Patch
(22.11 KB, patch)
2021-10-05 13:32 PDT
,
alan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2021-10-05 13:32:52 PDT
Created
attachment 440256
[details]
Patch
EWS
Comment 2
2021-10-06 06:41:07 PDT
Committed
r283614
(
242566@main
): <
https://commits.webkit.org/242566@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 440256
[details]
.
Radar WebKit Bug Importer
Comment 3
2021-10-06 06:42:16 PDT
<
rdar://problem/83931674
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug