[LFC][IFC] word-break: break-all only allows mid-word arbitrary breaking positions https://bugs.webkit.org/show_bug.cgi?id=231247

Reviewed by Antti Koivisto.

Source/WebCore:

Introduce a new type of breaking type where the arbitrary position is only applied when breaking mid-word within a continuous content.
While normally when we search for a breaking position inside an overflowing continuous set of runs, we find ourselves inside a "word" and any breaking
position would match the definition of the mid-work break.

However in other cases when these runs consist more than just a "word", for example

  'XX ' (where the "white-space: break-spaces" sets the line breaking opportunity after the trailing whitespace)
  'word-break: break-all' does not affect the breaking behavior between the trailing X and the ' ' and therefore it is not a breaking position.

It may very well be a valid breaking position if some other CSS properties allow it, but the notion of being able to break at any position (break-all) does not apply here.

see https://drafts.csswg.org/css-text-3/#word-break-property

WPT progressions.

* layout/formattingContexts/inline/InlineContentBreaker.cpp:
(WebCore::Layout::nextTextRunIndex):
(WebCore::Layout::previousTextRunIndex):
(WebCore::Layout::findTrailingRunIndex):
(WebCore::Layout::InlineContentBreaker::tryBreakingOverflowingRun const):
(WebCore::Layout::InlineContentBreaker::tryBreakingPreviousNonOverflowingRuns const):
(WebCore::Layout::InlineContentBreaker::tryBreakingNextOverflowingRuns const):
(WebCore::Layout::InlineContentBreaker::processOverflowingContentWithText const):
(WebCore::Layout::InlineContentBreaker::wordBreakBehavior const):
(WebCore::Layout::InlineContentBreaker::tryBreakingTextRun const):
* layout/formattingContexts/inline/InlineContentBreaker.h:

LayoutTests:

* TestExpectations:


Canonical link: https://commits.webkit.org/242566@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283614 268f45cc-cd09-0410-ab3c-d52691b4dbfc